--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,3 @@
-MYSQL_ROOT_PASSWORD=example
-MYSQL_DATABASE=ecommerce_db
-MYSQL_USER=myuser
-MYSQL_PASSWORD=mypassword
-MYSQL_HOST=db
+DATABASE=ecommerce_db
+USER=myuser
+PASSWORD=mypassword
