--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,34 @@
 version: '3.8'
 
 services:
-  web:
+  django:
     build: .
+    container_name: django
     command: bash -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     volumes:
-      - ./src:/app
+      - .:/usr/src/app
     ports:
       - "8000:8000"
     depends_on:
-      - db
+      - pgdb
     env_file:
       - .env
 
-  db:
-    image: mysql:5.7
+  pgdb:
+    # Использование готового образа postgres
+    image: postgres
+    # Задание переменных окружения для контейнера с postgres
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      - POSTGRES_DB=${DATABASE}
+      - POSTGRES_USER=${USER}
+      - POSTGRES_PASSWORD=${PASSWORD}
+      # Задание имени контейнера для сервиса pgdb
+    container_name: pgdb
+    # Связывание тома с директорией в контейнере для сохранения данных postgres
     volumes:
-      - mysql_data:/var/lib/mysql
+      - ./pgdata:/var/lib/postgresql/data  # Монтируем папку на хосте
     ports:
-      - "3306:3306"
+      - "5432:5432"
 
 volumes:
-  mysql_data:
+  pgdbdata: null
